# VallaPOS

./: .env.example  .gitignore  README.md  STATE.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  desktop-release.yml
app/: error.tsx  globals.css  layout.local.tsx  layout.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.local.tsx  page.tsx  robots.ts  sitemap.ts  sw.ts
app/(app)/: layout.local.tsx  layout.tsx
app/blog/: layout.tsx  page.tsx
app/disputes/: page.tsx
app/dmca/: page.tsx
app/do-not-sell/: page.tsx
app/privacy/: page.tsx
app/terms/: page.tsx
app/~offline/: page.tsx
docs/: ARCHITECTURE.md  AUDIT_EVIDENCE.md  BETTER_AUTH_AUDIT.md  DATA_DELETION.md  EDITIONS.md  IMPROVEMENT_PLAN.md  ONLINE_ORDERING.md  PAYMENTS.md  PAYROLL.md  PAYROLL_TAX.md  PERIPHERALS.md  PRD.md  RELEASING.md  RESTAURANT_MODE_PROGRESS.md  ROADMAP.md  SECURITY_AUDIT.md  SHIP_DESKTOP.md
docs/audit/: README.md  REMEDIATION.md  backend.md  frontend.md  func.md  perf.md  security.md
e2e/: README.md  smoke.spec.ts
lib/: mockData.ts
prisma/: schema.prisma  seed.ts  smoke-auth.ts  smoke-order-race.ts
scripts/: build-local.mjs  cloudprnt-sim.mjs  gen-icons.mjs  stripe-billing-smoke.mjs  stripe-connect-smoke.mjs  stripe-qr-smoke.mjs
src/: middleware-csp.test.ts
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  license.rs  main.rs
(+415 files in other folders)
